# utils

./: .editorconfig  .gitignore  README.md  justfile  pyproject.toml
containers/: dict_like.py
pyutils/containers/: __init__.py  dict_like.py  list_like.py
tests/containers/: test_dict_like.py
